<resources>
    <string name="app_name">RFS Client</string>
    <string name="host_string">Host</string>
    <string name="port_string">Port</string>
    <string name="username_string">Name</string>
    <string name="password_string">PWD</string>
  <string name="host_hit_string" translatable="false">localhost, 192.168.1.1</string>
    <string name="port_hit_string" translatable="false">1025 - 65535</string>
    <string name="username_hit_string">admin</string>
    <string name="password_hit_string">Your password</string>
  <string name="login_string">Login</string>
  <string name="about_string">about</string>
  <string name="exit_again_string">Press again to exit</string>
  <string name="new_dir_string">new directory</string>
  <string name="rename_string">rename</string>
  <string name="move_string">move to ...</string>
  <string name="copy_string">copy to ...</string>
  <string name="remove_string">remove</string>
  <string name="unknown_error_string">unknow error</string>
  <string name="input_new_name_string">input a new name</string>
  <string name="yes_string">yes</string>
  <string name="cancel_string">cancel</string>
  <string name="net_error_string">net connect error</string>
  <string name="illegal_name_string">illegal name</string>
  <string name="confirm_remove_string">are you sure remove this file/directory?</string>
  <string name="ask_string">ask</string>
  <string name="website_string"><a href="https://github.com/SHIINASAMA/RFS4Android">repository</a></string>
  <string name="developer_string"><a href="https://github.com/SHIINASAMA" />developer</string>
  <string name="unknown_version_string">unknown version</string>
  <string name="download_string">download</string>
  <string name="upload_string">upload</string>
  <string name="task_view_string">task view</string>
  <string name="select_string">select</string>
  <string name="select_move_location_string">move to ...</string>
  <string name="select_copy_location_string">copy to ...</string>
  <string name="select_location_string">select location</string>
  <string name="file_string">files</string>
  <string name="task_string">tasks</string>
  <string name="no_task_string">no current task</string>
  <string name="pause_string">pause</string>
  <string name="resume_string">resume</string>
  <string name="cancel_all_string">cancel all</string>
  <string name="pause_all_string">pause all</string>
  <string name="resume_all_string">resume all</string>
  <string name="done_string">done</string>
  <string name="failed_string">failed</string>
  <string name="transfer_string">transfer</string>
  <string name="succeeded_string">succeeded</string>
  <string name="finished_string">finished</string>
  <string name="canceled_string">canceled</string>
</resources>